--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,84 @@
-*.o
-grail
+#==============================================================================#
+# This file specifies intentionally untracked files that git should ignore.
+# See: http://www.kernel.org/pub/software/scm/git/docs/gitignore.html
+#
+# This file is intentionally different from the output of `git svn show-ignore`,
+# as most of those are useless.
+#==============================================================================#
+
+#==============================================================================#
+# File extensions to be ignored anywhere in the tree.
+#==============================================================================#
+# Temp files created by most text editors.
+*~
+# Merge files created by git.
+*.orig
+# Byte compiled python modules.
+*.pyc
+# vim swap files
+.*.swp
+.sw?
+#OS X specific files.
+.DS_store
+._.DS_store
+.DS_Store
+._.DS_Store
+#a==============================================================================#
+# Explicit files to ignore (only matches one).
+#==============================================================================#
+.gitusers
+autom4te.cache
+cscope.files
+cscope.out
+autoconf/aclocal.m4
+autoconf/autom4te.cache
+autoconf/configure.bak
+autoconf/configure
+compile_commands.json
+
+#==============================================================================#
+# Directories to ignore (do not add trailing '/'s, they skip symlinks).
+#==============================================================================#
+# External projects that are tracked independently.
+!projects/CMakeLists.txt
+!projects/Makefile
+# Clang, which is tracked independently.
+tools/clang
+# LLDB, which is tracked independently.
+tools/lldb
+# lld, which is tracked independently.
+tools/lld
+# Polly, which is tracked independently.
+tools/polly
+# Sphinx build tree, if building in-source dir.
+docs/_build
+
+#==============================================================================#
+# Files created in tree by the Go bindings.
+#==============================================================================#
+bindings/go/llvm/llvm_config.go
+bindings/go/llvm/workdir
+
+
+build
+build-*
+Makefile.common
+Makefile.pre
+config.log
+config.status
+include/Config/config.h
+.cproject
+.project
+.settings/
+Debug+Asserts
+Release+Asserts
+*+Asserts
+nbproject
+mytest
+Doxyfile
+configure.out
+.autotools
+
+/.ptp-sync/
+.ptp-sync-*
+
